--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,11 @@
     width: 45%;
     height: 81%;
 }
+.girlPhotoBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
 .girlPhotoBox{
     width: 95%;
     height: 85%;
@@ -81,9 +86,6 @@
 }
 }
 @media screen and (min-width:900px) {
-    .girlPhoto{
-        display: none;
-    }
     .girlPhotoLage{
         display: block;
         height: 400px;
