--- a/css/staff.css
+++ b/css/staff.css
@@ -43,6 +43,11 @@
   .staPhotoffBoxSmall ul{
     width: 100%;
   }
+  .staPhotoffBoxSmall ul li img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   .txt{
       width: 45%;
       height: 100px;
