--- a/css/index.css
+++ b/css/index.css
@@ -63,11 +63,11 @@
     border: 3px lightblue solid;
     border-radius: 10px;
 }
-.newsAndMolir{
-    display: none;
-}
+   .molir{
+        display: none;
+    }
 .text{
-    height: 300px;
+    height: 460px;
     width: 95%;
     margin: 3%;
     font-size: 18px;
@@ -98,8 +98,8 @@
         width: 24%;
         height: 98%;
     }
-    .news{
-        display: none;
+    .molir{
+        display: block;
     }
     .girlPhotoBox {
         height: 70%;
