--- a/css/nav_top.css
+++ b/css/nav_top.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     list-style-type: none;
+    overflow-x: unset;
 }
 a{
     text-decoration: none;
